styles/style.css
/* ... */
body {
  font-family: "Titillium Web", sans-serif;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Oswald", sans-serif;
}

a {
  text-decoration: none;
}

input,
select,
textarea {
  min-height: 2.5rem;
  background: #fff;
  border-width: 1px 1px 4px 1px;
  border-style: solid;
  border-color: var(--primary-color);
  border-radius: 3px;
  padding: 0 .5rem;
}

option {
  /* Establece los estilos de los ítems */
  background-color: #fff !important;
  color: #333;
  font-size: 14px;
}

.search input {
  width: calc(50vw - 1rem);
}

.primary-button,
.secondary-button {
  display: block;
  background-color: var(--primary-color);
  font-family: "Oswald", sans-serif;
  color: #fff;
  text-align: center;
  width: 250px;
  height: 40px;
  border-radius: 33px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.primary-button {
  transition: background-color 0.5s ease-in-out;
}

.primary-button:hover {
  background-color: var(--accent-color-1);
}

.secondary-button {
  background-color: transparent;
  color: var(--primary-color);
  border: 2px solid var(--primary-color);
  transition: border-width 0.5s ease-in-out;
}

.secondary-button:hover {
  border-width: 3px;
}

.cta {
  display: block;
  background-color: var(--accent-color-1);
  font-family: "Oswald", sans-serif;
  font-size: 1.2rem;
  color: #fff;
  text-align: center;
  width: 106px;
  padding: 3px;
  transition: background-color 0.5s ease-in-out;
}

.cta:hover {
  background-color: var(--accent-color-2);
}

.white-section {
  margin: 16px;
  padding: 41px 0;
}

.principal {
  margin-top: 2rem;
}

.brown-section {
  padding-top: 41px;
  background-color: var(--secondary-color-20);
}

.brown-section .content-wrapper {
  margin: 16px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 1rem;
}

.brown-section .section-title {
  color: var(--secondary-color);
}

.brown-section .primary-button {
  background-color: var(--secondary-color);
  margin: 1rem auto;
}

.brown-section .img-wrapper {
  width: 100%;
  padding-top: 100%;
  background-image: url("../images/frutas_verduras.jpg");
  background-position: center;
  background-size: cover;
}

.section-title {
  font-size: 32px;
  line-height: 35px;
  color: var(--primary-color);
  text-align: center;
  margin-bottom: 1rem;
}

.page-title {
  font-size: 48px;
  line-height: 58px;
  color: var(--primary-color);
  text-align: center;
  margin-bottom: 1.5rem;
  margin-top: 1rem;
}

.page-text {
  font-size: 20px;
  margin: 0 auto;
  max-width: 580px;
  text-align: center;
}

.section-text {
  text-align: center;
  max-width: 580px;
  margin: 0 auto 39px auto;
}

.white-section > .secondary-button {
  margin: 39px auto 0px auto;
}

/* HEADER */

header {
  position: sticky;
  top: 0;
  z-index: 100;
}

.header-menu-1 {
  min-height: 96px;
  background-color: var(--primary-color);
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: center;
}

.header-menu-1 > * {
  min-height: 48px;
}

.header-menu-1 .direct-access {
  display: flex;
  flex-basis: 100%;
}

.direct-access div {
  flex-basis: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.direct-access div:first-child {
  background-color: var(--secondary-color-40);
}

.direct-access div:last-child {
  background-color: var(--secondary-color-20);
}

.direct-access a {
  color: #000;
}

.logo-container {
  display: flex;
  align-items: center;
  padding-left: 20px;
}

.hamburger {
  padding-right: 20px;
}

.hamburger a {
  color: #fff;
  font-size: 2rem;
}

.header-menu-2 {
  display: none;
  background-color: var(--primary-color);
  font-weight: bold;
  z-index: 100;
  position: absolute;
  top: 96px;
  width: 100%;
}

.header-menu-2 i {
  font-size: 0.5rem;
  font-weight: bolder;
  padding-top: 0.5rem;
  padding-left: 0.5rem;
}

.d-block {
  display: block;
}

.header-menu-2 ul li {
  display: flex;
  justify-content: center;
  padding: 15px;
  border-top: 1px solid white;
}

.header-menu-2 ul li a,
.header-menu-2 ul li i {
  color: #fff;
}

.header-menu-2 li.dropdown {
  position: relative;
  padding-left: 0px;
  padding-right: 0px;
}

.header-menu-2 li.dropdown span {
  display: block;
  position: absolute;
}

.submenu {
  background-color: var(--primary-color-40);
  /* position: absolute; */
  position: relative;
  bottom: -15px; 
  margin-top: 26px; 
  display: flex;
  flex-direction: column;
  width: 100%;
}

.logo {
  margin-top: 0.2rem;
  width: 160px;
}

.redes {
  position: absolute;
  top: 110px;
  left: 20px;
  z-index: 1;
  display: flex;
  gap: 0.5em;
}

.redes a i {
  color: #fff;
  mix-blend-mode: difference;
}

.redes a i.green {
  color: var(--primary-color);
}

.darker a i {
  color: var(--primary-color);
}

/* CAROUSEL AND HERO */

.hero {
  background-image: url("../images/hero_img_socis_xs.jpg");
  background-position: center;
  background-size: cover;
}

.carousel,
.hero {
  width: 100%;
  height: calc(100vh - 96px);
  overflow: hidden;
  position: relative;
}

.carousel-inner {
  display: flex;
  transition: transform 0.5s ease-in-out;
  width: 100%;
}

.carousel-wrapper {
  position: relative;
  flex: 0 0 auto;
  width: 100vw;
  height: 100vh;
}

.carousel-slide-information,
.hero-information {
  position: absolute;
  z-index: 6;
  width: 85vw;
  top: 50%;
  left: 50%;
  transform: translate(-50%, 10%);
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  gap: 1rem;
}

.carousel-slide-information h3,
.carousel-slide-information p,
.hero-information h1,
.hero-information p {
  color: #fff;
  text-align: center;
  text-shadow: 0px 4px 6px rgba(0, 0, 0, 0.75);
}

.carousel-slide-information p,
.hero-information p {
  font-size: 1.3rem;
}

.carousel-slide-information h3,
.hero-information h1 {
  font-weight: bold;
  font-size: 32px;
  line-height: 36px;
}
/* ... */

